--- a/src/app/quiz-details/quiz-details.component.html
+++ b/src/app/quiz-details/quiz-details.component.html
@@ -36,7 +36,7 @@
 
     <div class="quiz-actions">
       <button (click)="startActualQuiz(quiz.quizId)" class="btn btn-start-actual-quiz">
-        Commencer cette quiz
+        Commencer ce quiz
       </button>
     </div>
 
