--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -6,7 +6,7 @@
     <p>Chargement des quiz...</p>
   </div>
   <div class = 'create'> 
-    <button (click) ="createQuiz()" class = "create-btn" >Create Quiz</button>
+    <button (click) ="createQuiz()" class = "create-btn" >Créer un quiz</button>
   </div>
 
   <div *ngIf="error && !isLoading" class="error-message">
