--- a/src/app/quiz-participation/quiz-participation.component.css
+++ b/src/app/quiz-participation/quiz-participation.component.css
@@ -24,7 +24,20 @@
   margin-top: 10px;
   line-height: 1.4;
 }
-
+.btn{
+  width: 30%;
+  padding: 15px;
+  background: linear-gradient(90deg, var(--color-violet) 0%, var(--color-blue) 100%);
+  color: var(--color-white);
+  border: none;
+  border-radius: 8px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  cursor: pointer;
+  margin-top: 35px;
+  transition: all 0.3s ease;
+  
+}
 .answers-list {
   list-style: none;
   padding: 0;
